samples/_failures_safe/1761181291_6b289c_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_370ee22c.c: In function ‘main’:
./samples/SAFE/__tmp_370ee22c.c:163:46: error: ‘input_b’ undeclared (first use in this function); did you mean ‘input_buf’?
  163 |     double ratio = (double)compressed_size / input_b
      |                                              ^~~~~~~
      |                                              input_buf
./samples/SAFE/__tmp_370ee22c.c:163:46: note: each undeclared identifier is reported only once for each function it appears in
./samples/SAFE/__tmp_370ee22c.c:163:5: error: expected ‘,’ or ‘;’ at end of input
  163 |     double ratio = (double)compressed_size / input_b
      |     ^~~~~~
./samples/SAFE/__tmp_370ee22c.c:163:5: error: expected declaration or statement at end of input
